[package]
name = "serv"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-web = "3.3.3"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"
overflow-checks = false
strip = true
